# paper-loupe

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  config_example.yaml  pyproject.toml  requirements.md
.cursor/rules/: uv.mdc
paper_loupe/: __init__.py  arxiv_lookup.py  cli.py  config.py  email_processor.py  llm_analyzer.py  models.py  paper_store.py
tests/: test_arxiv_lookup.py  test_cli.py  test_email_processor.py  test_paper_store.py
